--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .header-color {
-    background: #7F7FD5;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
+    background: #373B44;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #4286f4, #373B44);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #4286f4, #373B44); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    }
 
 .landing-grid {
     background: #D3CCE3;  /* fallback for old browsers */
@@ -61,7 +61,7 @@
 
 .profile-pic {
     height: 250px;
-    padding: 5em;
+    padding-top: 5em;
 }
 
 .contact-list i {
@@ -86,7 +86,7 @@
 
 .banner-text {
     background-color: black;
-    opacity: o.8;
+    opacity: 0.8;
     width: 75%;
     margin: auto;
     border-radius: 10px;
